Fix wrong font finding

--- a/app/assets/stylesheets/magic-font.css
+++ b/app/assets/stylesheets/magic-font.css
@@ -3,7 +3,7 @@
  *  Based off Font Awesome's CSS - http://fontawesome.io/license (CSS: MIT License)
  *  CSS Classes and the associated HTML are subject to change
  */
- 
+
 /* Font uses by Magic the Gathering
  * magic-font => Custom font that contains the MtG symbols
  * Mplantin => Font used for the text description in the card and for mana costs inside the mana symbol circles
@@ -22,20 +22,20 @@
 
 @font-face {
   font-family: "Matrix-Bold";
-  src: url("fonts/Matrix-Bold.eot");
-  src: url("fonts/Matrix-Bold.eot") format("embedded-opentype"), 
-       url("fonts/Matrix-Bold.woff") format("woff"), 
-       url("fonts/Matrix-Bold.ttf") format("truetype");
+  src: url("Matrix-Bold.eot");
+  src: url("Matrix-Bold.eot") format("embedded-opentype"),
+       url("Matrix-Bold.woff") format("woff"),
+       url("Matrix-Bold.ttf") format("truetype");
   font-weight: normal;
   font-style: normal;
 }
 
 @font-face {
   font-family: 'Mplantin';
-  src: url('fonts/Mplantin.eot');
-  src: url('fonts/Mplantin.woff') format('woff'), 
-       url('fonts/Mplantin.ttf') format('truetype'), 
-       url('fonts/Mplantin.svg') format('svg');
+  src: url('Mplantin.eot');
+  src: url('Mplantin.woff') format('woff'),
+       url('Mplantin.ttf') format('truetype'),
+       url('Mplantin.svg') format('svg');
   font-weight: normal;
   font-style: normal;
 }
